Test to fix scaling issue on mobile devices

--- a/styles/play.css
+++ b/styles/play.css
@@ -12,6 +12,9 @@ html, body {
     position: absolute;
     width: 100vw;
     height: 100vh;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
     z-index: 0;
 }
 
@@ -26,14 +29,6 @@ html, body {
 }
 
 @media (max-width: 600px) {
-    #panorama {
-        bottom: 0;
-        position: absolute;
-        width: 100vw;
-        height: 100vw;
-        z-index: 0;
-    }
-
     #map {
         bottom: 1%;
         right: 1%;
